0_current/D_kubeflow/ingress-nginx-kubeflow-jupyter-prod.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: istio-system
  name: ingress-istio-ingressgateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    #cert-manager.io/cluster-issuer: letsencrypt-prod-nginx
    #ingress.kubernetes.io/ssl-redirect: "true"
    #ingress.kubernetes.io/ssl-redirect: "false"
    #kubernetes.io/tls-acme: "true"
spec:
  tls:
  # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
  #- hosts:
  #  - kf.jupyterbook.com
  #  secretName: nginx-kubeflow-jupyter-secret
  rules:
    # Replace the placeholder with your domain name (e.g. ingress.dev.blog.shoot.canary.k8s-hana.ondemand.com)
    - host: kf.jupyterbook.com
      http:
        paths:
          - path: /
            backend:
              serviceName: istio-ingressgateway
              servicePort: 80
